Updated side navbar, resolved nav-items overflow issues

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,5 +1,11 @@
-body{
-    margin: 0;
+ *{
+  box-sizing: border-box;
+  margin: 0;
+  border: 0;
+
+ }
+ body{
+
     font-family: Georgia, 'Times New Roman', Times, serif
 }
  
@@ -56,7 +62,7 @@ body{
   }
   
   h1 {
-    margin: 0;
+
     color: white;
     font-size: 30px;
   }
@@ -66,7 +72,7 @@ body{
   }
   
   .lang {
-    margin-left: 10px;
+    padding-left: 10px;
     text-decoration: none;
     color: white;
   }
@@ -106,155 +112,116 @@ body{
 }
 
 
-.container {
-    display: flex;
-      
+ .container {
+  display: flex;
 }
 
 .sidebar {
-    width: 300px;
-    background-color:rgb(59,63,95);
-    color: white;
-    display: flex;
-    flex-direction: column;
-    padding: 20px;
-    height: 100vh;
-    justify-content: flex-start; 
-    overflow-y: auto; 
-
-
-   
-}
-.sidebar hr {
-  width: 85%;
-  margin: 5px auto; 
-  border: none;
-  height: 1px;
-  background-color: rgba(255, 255, 255, 0.3); 
+  width: 300px;
+  background-color: rgb(59,63,95);
+  color: white;
+  display: flex;
+  flex-direction: column;
+  padding: 1rem 0;
+  height: 100vh;
+  
 }
 
-
-.nav-item {
-    margin-bottom: 10px;
-    width: 100%;
-    
+.nav-item{
+  padding-bottom: 0.9rem;
+  
 
 }
 
 .nav-item button {
-    width: 100%;
-    background:none;
-    border: none;
-    color: white;
-    font-size: 18px;
-    text-align: left;
-    padding: 10px;
-    cursor: pointer;
-    font-weight: bold;
-    margin-left: 30px;
-    transition: all 0.3s ease-in-out;
-
-    
-
-
+  width: 100%;
+  background: none;
+  color: white;
+  font-size: 18px;
+  text-align: left;
+  padding: 10px;
+  cursor: pointer;
+  font-weight: bold;
+  
+  
 
 }
+
 .nav-links {
-    display: none;
-    flex-direction: column;
-    /* gap: 5px; */
-    padding-left: 0;
-    background-color:  #2f324c;
 
+  display: none;
+  flex-direction: column;
+  background-color: #2f324c; 
+  overflow: hidden;
 
-
-}
-
-.nav-links a {
-    color:#a8a9b4;
-    text-decoration: none;
-    font-size: 18px;
-    padding: 5px;
-    margin-bottom:10px;
-    background-color: rgba(13, 8, 8, 0);
-
-
-    
 }
 
 .nav-links li {
-  list-style-type: none;
-  display: flex;
-  align-items: center;
-  gap: 8px;
-  padding: 5px 0;
-  position: relative;
-
-
+  list-style-type: circle; 
+  color: #a8a9b4;
+  padding: 1rem; 
+  transition: none;
+  
+  
 
 }
-.nav-links li::before{
-    content: " ";
-    width: 8px;
-    height: 8px;
-    border: 2px solid gray; 
-    border-radius: 50%;
-    position: relative;
-    background: transparent;
-    left: 0;
-    flex-shrink: 0;
-}
-.nav-links li:hover::before {
-  background:  #0ba5cc; 
-  border-color: #0ba5cc;
-  transition: all 0.3s ease-in-out;
-}
-.nav-links a {
-  color:#a8a9b4;
+
+.nav-links li a {
+  font-weight: 100;
+  transition: color 0.2s ease-in-out;
+  padding-left: 20px;
+  color: #a8a9b4;
   text-decoration: none;
-  font-size: 16px;
-  display: block;
-  transition: color 0.3s;
-  transition: all 0.3s ease-in-out;
+  
 
+}
+.nav-item button.active  {
+  background-color: #2f324c;
+  max-height: 500px; 
+}
+
+.nav-links li::marker { 
+  font-size: 1rem;
+  content: "○"; 
+}
+.nav-links li:hover::marker{
+  content: "•";  
+  color: #0ba5cc;
+  font-size: 1rem;
+
+
+} 
+.nav-links li:hover {
+  color: white; 
+  
 }
 
 .nav-links li:hover a {
   color: white; 
-  transition: all 0.3s ease-in-out;
+  position: absolute;
 }
 
-.nav-item button.active {
-    background-color: #2f324c;
-    margin-left: 0; 
-    padding-left: 10px 15px; 
-    width: 100%;
-    text-align: left;
-    transition: all 0.3s ease-out;
-  }
 .appointment {
-   margin-top: 20px;
-    padding: 15px;
-    text-align: center;
-    background-color: #e74c3c;
-    color: white;
-    border-radius: 5px;
-    font-weight: bold;
-    cursor: pointer;
+  padding: 1rem 0;
+  text-align: center;
+  background-color: #e74c3c;
+  color: white;
+  font-weight: bold;
+  cursor: pointer;
 }
-.appointment:hover {
-    background-color: #c0392b;
-}
-hr {
-    border: none; 
-    height: 1px;
-    background-color: white;
-  }
-  li{
-    margin-bottom:10px;
-    background-color: rgba(13, 8, 8, 0);
 
-  }
+.appointment:hover {
+  background-color: #c0392b;
+}
+
+hr {
+
+  height: 0.09px;
+  background-color: #a8a9b4;
+
+  
+
+}
 
 .footer {
     background-color: #282C47;
@@ -294,4 +261,5 @@ hr {
 
 
 
-
+ 
+ 
